@@ -562,7 +562,7 @@ FUNTAB R_FunTab[] =
 {"unserializeFromConn",	do_unserializeFromConn,	0,	111,	2,	{PP_FUNCALL, PREC_FN,	0}},
 {"deparse",	do_deparse,	0,	11,	2,	{PP_FUNCALL, PREC_FN,	0}},
 {"dput",	do_dput,	0,	111,	2,	{PP_FUNCALL, PREC_FN,	0}},
-{"dump",	do_dump,	0,	111,	2,	{PP_FUNCALL, PREC_FN,	0}},
+{"dump",	do_dump,	0,	111,	3,	{PP_FUNCALL, PREC_FN,	0}},
 {"substitute",	do_substitute,	0,	0,	-1,	{PP_FUNCALL, PREC_FN,	0}},
 {"quote",	do_quote,	0,	0,	1,	{PP_FUNCALL, PREC_FN,	0}},
 {"quit",	do_quit,	0,	111,	3,	{PP_FUNCALL, PREC_FN,	0}},
